--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Image Card</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <header class="card-head">
       <h2 class="card-title"> Stegosaurus</h2>
       <span class="card-label">Plant-eater</span>
-      <img class="img-flex" src="https://placehold.it/640X480" atl="">
+      <img class="img-flex" src="https://placehold.it/640X480" alt="">
     </header>
     <div class="card-body">
       <p>The Stegosaurus is an armoured dinosaur with distinctive black plates and tail spikes.</p>
